2006-05-31  David Reveman  <davidr@novell.com>

	* plugins/move.c (moveHandleEvent): Initialize xRoot and yRoot.
	(bnc 179902)

	* src/Makefile.am (INCLUDES): Add @GL_CFLAGS@. (Eric Work)

2006-05-30  Dan Winship  <danw@novell.com>

	* configure.ac: Check libwnck for wnck_window_has_name (new in
	HEAD).

	* gnome/window-decorator/gnome-window-decorator.c
	(wnck_window_get_real_name): #if HAVE_WNCK_WINDOW_HAS_NAME,
	redefine wnck_window_get_name to return NULL if the window only
	has a fallback name. bnc 173059.

	* src/event.c (handleEvent): call moveInputFocusToOtherWindow()
	before destroyWindow() when processing a DestroyNotify, or else
	the input focus can get stranded.

2006-05-26  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* plugins/scale.c (SCALE_SLOPPY_FOCUS_DEFAULT): TRUE.

	* plugins/decoration.c (decorWindowUpdate): No drop-shadow decoration
	on windows with below state.

	* src/window.c (recalcWindowType): Treat dock windows with below state
	as normal windows. (bnc #178316)

	* plugins/cube.c (cubePaintTransformedScreen): Avoid optimized case
	when more than 4 cube sides.

2006-05-25  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* src/window.c (moveResizeWindow): Don't adjust position for NorthWest
	gravity. (bnc 178765) (fdo #6992)

	* plugins/compiz.schemas.in.in:
	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/display.c: Add maximize_window_horizontally,
	maximize_window_vertically, toggle_window_maximized,
	toggle_window_maximized_horizontally,
	toggle_window_maximized_vertically.

	* src/event.c (handleEvent): Track changes to maximizeWindow function.

	* plugins/move.c (moveHandleMotionEvent): Make sure we have a saved
	width before we use it. Track changes to maximizeWindow function.

	* plugins/wobbly.c (wobblyHandleEvent): Handle the case where
	window is not both vertically and horizontally maximized better.

	* include/compiz.h: Add MAXIMIZE_STATE macro.
